--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ Height:100%;
 }
 .left4{
     background-color: rgba(0, 0, 0, 0.2);
-    background-image: url(/images/17955959.jpg);
+    background-image: url(images/17955959.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
