--- a/style.css
+++ b/style.css
@@ -617,7 +617,7 @@ Height:100%;
 .left4{
     height: 70vh;
     background-color: rgba(0, 0, 0, 0.0);
-    background-image: url(/images/17955959.jpg);
+    background-image: url(images/17955959.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
